# Graph

./: .gitignore  README.md  main.cpp
Exemplo_Antigo/: Aresta.h  Grafo.cpp  Grafo.h  No.cpp  No.h  main.cpp
Exemplo_Atualizado/: Aresta.cpp  Aresta.h  Grafo.cpp  Grafo.h  No.cpp  No.h
Trabalho/: CMakeLists.txt  Grafo.h  main.cpp  saida_ponderada.txt
Trabalho/Parte2/: main.cpp
Trabalho/instancias Grafos não ponderados/: grafo_10000_5.txt  grafo_10000_7.txt  grafo_1000_4.txt
Trabalho/instancias_nao_ponderadas/: grafo_1000_5.txt  grafo_1000_8.txt  teste.txt
Trabalho/instancias_nao_ponderados/: grafo_10000_4.txt  grafo_1000_2.txt  grafo_1000_3.txt  grafo_1000_7.txt
Trabalho/instancias_ponderadas/: test.txt  test_1.txt
Trabalho/output/: grafo_ponde_Dir.txt
Trabalho/src/: Grafo.cpp  Grafo.h  Menu.h
Trabalho/src/models/: AGrafo.cpp  AGrafo.h  Aresta.cpp  Aresta.h  AuxFuncs.cpp  Basics.cpp  Grafo.cpp  Grafo.h  No.cpp  No.h  Output.cpp
instancias Grafos não ponderados/: grafo_10000_1.txt  grafo_10000_2.txt  grafo_10000_3.txt  grafo_10000_6.txt  grafo_10000_8.txt  grafo_1000_1.txt  grafo_1000_6.txt
src/: Aresta.cpp  Aresta.h  Grafo.h  No.cpp  No.h  main.cpp
